# dev_project

./: .gitignore  TS.md  pyproject.toml
backend/: db.sqlite3
backend/buildings/: admin.py  apps.py  serializer.py
backend/buildings/migrations/: 0001_initial.py  0002_alter_building_options_alter_floor_options_and_more.py  0003_alter_building_project.py
backend/buildings/models/: building.py  floor.py  section.py
backend/config/: settings.py  urls.py
backend/projects/: admin.py  apps.py  constants.py  models.py  serializers.py  views.py
backend/projects/migrations/: 0001_initial.py  0002_alter_project_options.py  0003_alter_project_type.py
backend/properties/: admin.py  apps.py  constants.py  models.py
backend/properties/migrations/: 0001_initial.py  0002_alter_property_options.py  0003_alter_property_area_alter_property_price.py  0004_alter_property_status_alter_property_type.py
