[project]
name = "dev-project"
version = "0.1.0"
description = ""
authors = [
    {name = "SGreshilov",email = "workgresh@gmail.com"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "django (>=4.1,<4.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
